# 3D-Scene-Flow-Optimization

./: README.md  demo.ipynb  frame_example.pcd
KITTI/2011_09_26/2011_09_26_drive_0035_extract/image_00/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_extract/image_01/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_extract/image_02/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_extract/image_03/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_extract/oxts/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_extract/oxts/data/: 0000000000.txt  0000000001.txt  0000000002.txt  0000000003.txt  0000000004.txt  0000000005.txt  0000000006.txt  0000000007.txt  0000000008.txt  0000000009.txt  0000000010.txt  0000000011.txt  0000000012.txt  0000000013.txt  0000000014.txt  0000000015.txt  0000000016.txt  0000000017.txt  0000000018.txt  0000000019.txt  0000000020.txt  0000000021.txt  (+1255 more)
KITTI/2011_09_26/2011_09_26_drive_0035_extract/velodyne_points/: timestamps.txt  timestamps_end.txt  timestamps_start.txt
KITTI/2011_09_26/2011_09_26_drive_0035_sync/image_00/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_sync/image_01/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_sync/image_02/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_sync/image_03/: timestamps.txt
KITTI/2011_09_26/2011_09_26_drive_0035_sync/velodyne_points/: timestamps.txt  timestamps_end.txt  timestamps_start.txt
triangulation/: CMakeLists.txt  extract_mesh.cpp
visualization/: CMakeLists.txt
visualization/src/: visualize_mesh.cpp
(+135 files in other folders)
